--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,21 +2,25 @@ name: Spring Boot CI/CD
 
 on:
   push:
-    branches: [ main, develop ]
+    branches:
+      - main
+      - develop
   pull_request:
-    branches: [ main, develop ]
+    branches:
+      - main
+      - develop
 
 jobs:
   build:
-    name: Build, Test, Sonar & Nexus
+    name: Build & Test Spring Boot
     runs-on: ubuntu-latest
 
     steps:
-      # Checkout du code
+      # Récupération du code
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      # Installation de Java 17
+      # Installation de Java
       - name: Set up JDK 17
         uses: actions/setup-java@v4
         with:
@@ -24,60 +28,42 @@ jobs:
           distribution: 'temurin'
           cache: maven
 
-      # Build + tests
+      # Build & tests Maven
       - name: Build with Maven
         run: mvn clean verify
 
-      # Analyse SonarQube
-      - name: SonarQube Analysis
-        run: |
-          mvn sonar:sonar \
-            -Dsonar.projectKey=springboot-app \
-            -Dsonar.host.url=${{ secrets.SONAR_HOST_URL }} \
-            -Dsonar.login=${{ secrets.SONAR_TOKEN }}
-
-      # Publier vers Nexus (uniquement sur main)
-      - name: Publish to Nexus
-        if: github.ref == 'refs/heads/main'
-        run: mvn deploy -DskipTests
-        env:
-          NEXUS_USER: ${{ secrets.NEXUS_USER }}
-          NEXUS_PASSWORD: ${{ secrets.NEXUS_PASSWORD }}
-
-      # Uploader le JAR comme artefact
+      # Upload du JAR comme artefact
       - name: Upload JAR artifact
-        if: github.ref == 'refs/heads/main'
         uses: actions/upload-artifact@v4
         with:
           name: springboot-jar
           path: target/*.jar
 
   docker:
-    name: Build & Push Docker Image
+    name: Build Docker Image
     runs-on: ubuntu-latest
     needs: build
     if: github.ref == 'refs/heads/main'
 
     steps:
-      # Checkout du code
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      # Télécharger le JAR
       - name: Download JAR artifact
         uses: actions/download-artifact@v4
         with:
           name: springboot-jar
           path: target
 
-      # Login Docker Hub
+      - name: Build Docker image
+        run: docker build -t springboot-app:latest .
+
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      # Build et Push de l'image Docker
       - name: Build & Push Docker image
         run: |
           docker build -t ${{ secrets.DOCKER_USERNAME }}/springboot-app:latest .
