--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,25 +2,21 @@ name: Spring Boot CI/CD
 
 on:
   push:
-    branches:
-      - main
-      - develop
+    branches: [ main, develop ]
   pull_request:
-    branches:
-      - main
-      - develop
+    branches: [ main, develop ]
 
 jobs:
   build:
-    name: Build & Test Spring Boot
+    name: Build, Test, Sonar & Nexus
     runs-on: ubuntu-latest
 
     steps:
-      # Récupération du code
+      # Checkout du code
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      # Installation de Java
+      # Installation de Java 17
       - name: Set up JDK 17
         uses: actions/setup-java@v4
         with:
@@ -28,42 +24,61 @@ jobs:
           distribution: 'temurin'
           cache: maven
 
-      # Build & tests Maven
+      # Build + tests
       - name: Build with Maven
         run: mvn clean verify
 
-      # Upload du JAR comme artefact
+      # Analyse SonarCloud
+      - name: SonarCloud Analysis
+        run: |
+          mvn sonar:sonar \
+            -Dsonar.projectKey=juniorlole_spring-maven \
+            -Dsonar.organization=juniorlole \
+            -Dsonar.host.url=https://sonarcloud.io \
+            -Dsonar.token=${{ secrets.SONAR_TOKEN }}
+
+      # Publier vers Nexus (uniquement sur main)
+      - name: Publish to Nexus
+        if: github.ref == 'refs/heads/main'
+        run: mvn deploy -DskipTests
+        env:
+          NEXUS_USER: ${{ secrets.NEXUS_USER }}
+          NEXUS_PASSWORD: ${{ secrets.NEXUS_PASSWORD }}
+
+      # Uploader le JAR comme artefact
       - name: Upload JAR artifact
+        if: github.ref == 'refs/heads/main'
         uses: actions/upload-artifact@v4
         with:
           name: springboot-jar
           path: target/*.jar
 
   docker:
-    name: Build Docker Image
+    name: Build & Push Docker Image
     runs-on: ubuntu-latest
     needs: build
     if: github.ref == 'refs/heads/main'
 
     steps:
+      # Checkout du code
       - name: Checkout repository
         uses: actions/checkout@v4
 
+      # Télécharger le JAR
       - name: Download JAR artifact
         uses: actions/download-artifact@v4
         with:
           name: springboot-jar
           path: target
 
-      - name: Build Docker image
-        run: docker build -t springboot-app:latest .
-
+      # Login Docker Hub
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
+      # Build et Push de l'image Docker
       - name: Build & Push Docker image
         run: |
           docker build -t ${{ secrets.DOCKER_USERNAME }}/springboot-app:latest .
